# PDFer4Life

./: .gitignore  Cargo.toml  README.md  build.rs  database.json  environment.env  err  notes.txt  run.md
src/: file_management.rs  globalCallbacks.rs  interface.rs  main.rs  notePage.rs  pdf_renderer.rs  txt_file.rs
ui/: app-window.slint  app.slint  common.slint  global-callbacks.slint  main-window.slint  note-page.slint  opening-page.slint  pdf-render.slint  slint-exports.slint  split-page.slint  text-editor.slint
