[package]
name = "slint-rust-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-dialog = "0.7.0"
slint = "1.7.2"
dotenv = "0.15"
pdfium-render = "0.8.26"

[build-dependencies]
slint-build = "1.7.2"


